# mediafx-blender

./: .gitmodules  CNAME  README.md  pyproject.toml
.github/workflows/: docs.yml
.github/workflows/doc/: _config.yml
.github/workflows/doc/_layouts/: default.html
src/mediafx/: encoder.py  exceptions.py  sequencer.py  sequences.py
tests/: test_badfile.py  test_goodfile.py
